Fix font clipping

--- a/static/css/common.css
+++ b/static/css/common.css
@@ -919,7 +919,7 @@ body.embeded #top {
     width: 100%;
     font-size: 20px;
     padding: 8px 10px;
-    height: 22px;
+    height: 24px;
 }
 
 #lowerSearchBox .searchButton,
